--- a/index.html
+++ b/index.html
@@ -1439,6 +1439,9 @@
                             <span class="tech-tag">Python</span>
                         </div>
                         <div class="project-links">
+                            <a href="https://previsaodeativosfinanceiros1.streamlit.app/" class="project-link outline">
+                                <i class="fas fa-eye"></i> Ver Projeto
+                            </a>
                             
                             <a href="https://github.com/VPLOPES/IA_para_previsao_de_precos_de_Ativos_Financeiros/tree/main" class="project-link outline">
                                 <i class="fab fa-github"></i> GitHub
@@ -1767,4 +1770,5 @@
         });
     </script>
 </body>
+
 </html>
