--- a/index.html
+++ b/index.html
@@ -1437,7 +1437,7 @@
                     <div class="testimonial-author">
                         <div class="author-avatar">RC</div>
                         <div class="author-info">
-                            <h4>Roberto Campos</h4>
+                            <h4>Jaqueline Souza</h4>
                             <div class="author-role">Diretor de Operações, Quantum Trading</div>
                         </div>
                     </div>
@@ -1445,14 +1445,36 @@
 
                 <div class="testimonial-card">
                     <div class="testimonial-content">
-                        O trabalho de Vinícius na estruturação do modelo de valuation para nosso grupo foi fundamental 
-                        para nossa estratégia de expansão. Profundo conhecimento técnico e visão estratégica diferenciada.
+                        Trabalhar com o Vinícius foi uma experiência extremamente positiva. 
+                        Ele é um profissional engajado e incansavelmente dedicado à busca de conhecimento, 
+                        sempre se atualizando com as últimas ferramentas e metodologias para melhorar a performance da equipe. 
+                        Sua capacidade de agir de forma autônoma, combinada com um desejo genuíno de aprender e crescer, 
+                        faz com que ele seja uma peça chave em qualquer time. Além disso, 
+                        Vinícius possui uma atenção aos detalhes admirável – algo que ele usa a seu favor como uma qualidade, 
+                        garantindo que tudo seja feito com excelência e perfeição. Sem dúvida, ele é um profissional comprometido e indispensável.
                     </div>
                     <div class="testimonial-author">
                         <div class="author-avatar">AS</div>
                         <div class="author-info">
-                            <h4>Ana Silva</h4>
-                            <div class="author-role">CFO, Agromercantil</div>
+                            <h4>Stefan W. D'amato</h4>
+                            <div class="author-role">Membro do Conselho de Política Econômica, FIEMG</div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="testimonial-card">
+                    <div class="testimonial-content">
+                        Vinicius Lopes possui sólidos conhecimentos em finanças e uma destacada habilidade 
+                        em gestão e liderança. Seu comprometimento é notável, sempre entregando resultados de alta qualidade. 
+                        Além disso, sua excelente comunicação permite transmitir informações com clareza e precisão. 
+                        Profissionalismo e ética permeiam todas as suas interações, promovendo um ambiente colaborativo e produtivo. 
+                        Tenho plena confiança de que ele será uma adição estratégica e valiosa para qualquer equipe ou projeto.
+                    </div>
+                    <div class="testimonial-author">
+                        <div class="author-avatar">AS</div>
+                        <div class="author-info">
+                            <h4>Diego Mota</h4>
+                            <div class="author-role">Economista, BDMG</div>
                         </div>
                     </div>
                 </div>
@@ -1720,4 +1742,5 @@
 </body>
 
 </html>
+
 
