--- a/index.html
+++ b/index.html
@@ -1435,7 +1435,7 @@
                         para nossa operação de trading.
                     </div>
                     <div class="testimonial-author">
-                        <div class="author-avatar">RC</div>
+                        <div class="author-avatar">JS</div>
                         <div class="author-info">
                             <h4>Jaqueline Souza</h4>
                             <div class="author-role">Diretor de Operações, Quantum Trading</div>
@@ -1454,7 +1454,7 @@
                         garantindo que tudo seja feito com excelência e perfeição. Sem dúvida, ele é um profissional comprometido e indispensável.
                     </div>
                     <div class="testimonial-author">
-                        <div class="author-avatar">AS</div>
+                        <div class="author-avatar">SD</div>
                         <div class="author-info">
                             <h4>Stefan W. D'amato</h4>
                             <div class="author-role">Membro do Conselho de Política Econômica, FIEMG</div>
@@ -1471,7 +1471,7 @@
                         Tenho plena confiança de que ele será uma adição estratégica e valiosa para qualquer equipe ou projeto.
                     </div>
                     <div class="testimonial-author">
-                        <div class="author-avatar">AS</div>
+                        <div class="author-avatar">DM</div>
                         <div class="author-info">
                             <h4>Diego Mota</h4>
                             <div class="author-role">Economista, BDMG</div>
@@ -1742,5 +1742,6 @@
 </body>
 
 </html>
+
 
 
