--- a/index.html
+++ b/index.html
@@ -1198,6 +1198,25 @@
                             <i class="fas fa-graduation-cap"></i>
                         </div>
                         <div>
+                            <h3 class="education-title">AI for Business</h3>
+                            <div class="education-school">University of Pennsylvania</div>
+                            <div class="education-period">2024</div>
+                        </div>
+                    </div>
+                    <p class="education-description">
+                        Especialização em inteligência artificial aplicada a negócios, 
+                        com foco em algoritmos de IA, blockchain em RH, Big Data, 
+                        Machine Learning e analytics para transformação digital e vantagem competitiva.
+                    </p>
+                </div>
+
+                
+                <div class="education-card">
+                    <div class="education-header">
+                        <div class="education-icon">
+                            <i class="fas fa-graduation-cap"></i>
+                        </div>
+                        <div>
                             <h3 class="education-title">Bacharelado em Economia</h3>
                             <div class="education-school">UFMG - Universidade Federal de Minas Gerais</div>
                             <div class="education-period">2018 - 2024</div>
@@ -1208,7 +1227,6 @@
                         Desenvolvimento de pesquisas em mercado financeiro e análise de risco.
                     </p>
                 </div>
-            </div>
 
                 <div class="education-card">
                     <div class="education-header">
@@ -1222,7 +1240,8 @@
                         </div>
                     </div>
                     <p class="education-description">
-                        Bolsista do programa Minas-Mundi, realizou intercâmbio estudantil no intuito de desenvolver
+                        Bolsista do programa Minas-Mundi, realizou 
+                        intercâmbio estudantil no intuito de desenvolver
                         conhecimento teórico, linguístico e cultural.
                     </p>
                 </div>
@@ -1742,6 +1761,7 @@
 </body>
 
 </html>
+
 
 
 
