--- a/index.html
+++ b/index.html
@@ -1245,6 +1245,24 @@
                         conhecimento teórico, linguístico e cultural.
                     </p>
                 </div>
+
+                <div class="education-card">
+                    <div class="education-header">
+                        <div class="education-icon">
+                            <i class="fas fa-graduation-cap"></i>
+                        </div>
+                        <div>
+                            <h3 class="education-title">Direito (incompleto)</h3>
+                            <div class="education-school">ESAMC</div>
+                            <div class="education-period">08-2012 - 06-2015</div>
+                        </div>
+                    </div>
+                    <p class="education-description">
+                        Formação parcial em Direito (seis períodos), 
+                        experiência que contribuiu para aprimorar a oratória, 
+                        a argumentação e o vocabulário jurídico.
+                    </p>
+                </div>
             </div>
         </section>
 
@@ -1761,6 +1779,7 @@
 </body>
 
 </html>
+
 
 
 
