--- a/index.html
+++ b/index.html
@@ -1267,73 +1267,77 @@
         </section>
 
 
-        <section id="education" class="container">
-            <h2 class="section-title">Formação Complementar</h2>
-            <div class="education-grid">
-                <div class="education-card">
-                    <div class="education-header">
-                        <div class="education-icon">
-                            <i class="fas fa-graduation-cap"></i>
-                        </div>
-                        <div>
-                            <h3 class="education-title">Engenharia Financeira com
-                            Inteligência Artificial</h3>
-                            <div class="education-school">Data Science Academy</div>
-                            <div class="education-period">2025</div>
-                    </p>
-                </div>
+        <section id="complementary-education" class="container">
+    <h2 class="section-title">Formação Complementar</h2>
+    <div class="education-grid">
 
-                <div class="education-card">
-                    <div class="education-header">
-                        <div class="education-icon">
-                            <i class="fas fa-graduation-cap"></i>
-                        </div>
-                        <div>
-                            <h3 class="education-title">Administração Financeira</h3>
-                            <div class="education-school">Insper</div>
-                            <div class="education-period">2025</div>
-                    </p>
+        <div class="education-card">
+            <div class="education-header">
+                <div class="education-icon">
+                    <i class="fas fa-graduation-cap"></i>
                 </div>
-
-                <div class="education-card">
-                    <div class="education-header">
-                        <div class="education-icon">
-                            <i class="fas fa-graduation-cap"></i>
-                        </div>
-                        <div>
-                            <h3 class="education-title">Successful Negotiation:
-                            Essential Strategies and Skills</h3>
-                            <div class="education-school">University of Michigan</div>
-                            <div class="education-period">2024</div>
-                    </p>
-                </div>
-
-                
-                <div class="education-card">
-                    <div class="education-header">
-                        <div class="education-icon">
-                            <i class="fas fa-graduation-cap"></i>
-                        </div>
-                        <div>
-                            <h3 class="education-title">Leadership Skills</h3>
-                            <div class="education-school">Indian Institute of Management Ahmedabad</div>
-                            <div class="education-period">2023</div>
-                    </p>
-                </div>
-
-                <div class="education-card">
-                    <div class="education-header">
-                        <div class="education-icon">
-                            <i class="fas fa-graduation-cap"></i>
-                        </div>
-                        <div>
-                            <h3 class="education-title">Treinamento em Precificação</h3>
-                            <div class="education-school">FIPE</div>
-                            <div class="education-period">2022</div>
-                    </p>
+                <div>
+                    <h3 class="education-title">Engenharia Financeira com Inteligência Artificial</h3>
+                    <div class="education-school">Data Science Academy</div>
+                    <div class="education-period">2025</div>
                 </div>
             </div>
-        </section>
+        </div>
+
+        <div class="education-card">
+            <div class="education-header">
+                <div class="education-icon">
+                    <i class="fas fa-graduation-cap"></i>
+                </div>
+                <div>
+                    <h3 class="education-title">Administração Financeira</h3>
+                    <div class="education-school">Insper</div>
+                    <div class="education-period">2025</div>
+                </div>
+            </div>
+        </div>
+
+        <div class="education-card">
+            <div class="education-header">
+                <div class="education-icon">
+                    <i class="fas fa-graduation-cap"></i>
+                </div>
+                <div>
+                    <h3 class="education-title">Successful Negotiation: Essential Strategies and Skills</h3>
+                    <div class="education-school">University of Michigan</div>
+                    <div class="education-period">2024</div>
+                </div>
+            </div>
+        </div>
+
+        <div class="education-card">
+            <div class="education-header">
+                <div class="education-icon">
+                    <i class="fas fa-graduation-cap"></i>
+                </div>
+                <div>
+                    <h3 class="education-title">Leadership Skills</h3>
+                    <div class="education-school">Indian Institute of Management Ahmedabad</div>
+                    <div class="education-period">2023</div>
+                </div>
+            </div>
+        </div>
+
+        <div class="education-card">
+            <div class="education-header">
+                <div class="education-icon">
+                    <i class="fas fa-graduation-cap"></i>
+                </div>
+                <div>
+                    <h3 class="education-title">Treinamento em Precificação</h3>
+                    <div class="education-school">FIPE</div>
+                    <div class="education-period">2022</div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</section>
 
 
         
@@ -1849,6 +1853,7 @@
 </body>
 
 </html>
+
 
 
 
