--- a/index.html
+++ b/index.html
@@ -1405,24 +1405,25 @@
                     </div>
                 </div>
                 
-                <div class="project-card" data-category="finance">
+                <div class="project-card" data-category="strategy">
                     <div class="project-image">
-                        <i class="fas fa-chart-pie"></i>
+                        <i class="fa-solid fa-chart-pie"></i>
                     </div>
                     <div class="project-content">
-                        <h3 class="project-title">Análise de Investimentos</h3>
+                        <h3 class="project-title">Pesquida de Mercado - Bebidas</h3>
                         <p class="project-description">
-                            Sistema de análise de investimentos e carteiras recomendadas para clientes de alta renda. Desenvolvimento de metodologia própria de avaliação e relatórios personalizados.
+                            Dashboard interativo em Power BI sobre a indústria de fabricação de bebidas em Minas Gerais e no Brasil. Inclui análises de estabelecimentos, empregos, produção industrial, comércio exterior (exportações, importações e balança comercial) e pesquisa de associados, com dados da RAIS, PIA e COMEXSTAT.
                         </p>
                         <div class="project-tech">
-                            <span class="tech-tag">Excel</span>
                             <span class="tech-tag">Power BI</span>
-                            <span class="tech-tag">VBA</span>
+                            <span class="tech-tag">SQL</span>
+                            <span class="tech-tag">Excel</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link outline">
-                                <i class="fas fa-eye"></i> Detalhes
+                            <a href="https://github.com/VPLOPES/RA_Bebidas" class="project-link">
+                                <i class="fas fa-eye"></i> GitHub
                             </a>
+                            
                         </div>
                     </div>
                 </div>
@@ -2103,3 +2104,4 @@
     </script>
 </body>
 </html>
+
