--- a/index.html
+++ b/index.html
@@ -1421,7 +1421,7 @@
                         </div>
                         <div class="project-links">
                             <a href="https://github.com/VPLOPES/RA_Bebidas" class="project-link">
-                                <i class="fas fa-eye"></i> GitHub
+                                <i class="fab fa-github"></i> GitHub
                             </a>
                             
                         </div>
@@ -2104,4 +2104,5 @@
     </script>
 </body>
 </html>
+
 
