--- a/index.html
+++ b/index.html
@@ -1420,7 +1420,7 @@
                             <span class="tech-tag">Excel</span>
                         </div>
                         <div class="project-links">
-                            <a href="https://github.com/VPLOPES/RA_Bebidas" class="project-link">
+                            <a href="https://github.com/VPLOPES/RA_Bebidas" class="project-link outline">
                                 <i class="fab fa-github"></i> GitHub
                             </a>
                             
@@ -2104,5 +2104,6 @@
     </script>
 </body>
 </html>
+
 
 
