--- a/index.html
+++ b/index.html
@@ -1407,7 +1407,7 @@
                 
                 <div class="project-card" data-category="strategy">
                     <div class="project-image">
-                        <i class="fa-solid fa-chart-pie"></i>
+                        <i class="fa-solid fa-champagne-glasses"></i>
                     </div>
                     <div class="project-content">
                         <h3 class="project-title">Pesquida de Mercado - Bebidas</h3>
@@ -1430,7 +1430,7 @@
 
                 <div class="project-card" data-category="strategy">
                     <div class="project-image">
-                        <i class="fa-solid fa-chart-pie"></i>
+                        <i class="fa-solid fa-ice-cream"></i>
                     </div>
                     <div class="project-content">
                         <h3 class="project-title">Pesquida de Mercado - Sorvetes</h3>
@@ -1453,7 +1453,7 @@
 
                 <div class="project-card" data-category="strategy">
                     <div class="project-image">
-                        <i class="fa-solid fa-chart-pie"></i>
+                        <i class="fa-solid fa-burger"></i>
                     </div>
                     <div class="project-content">
                         <h3 class="project-title">Pesquida de Mercado - Produtos Alimentícios</h3>
@@ -1476,7 +1476,7 @@
 
            <div class="project-card" data-category="strategy">
                     <div class="project-image">
-                        <i class="fa-solid fa-chart-pie"></i>
+                        <i class="fas fa-house"></i>
                     </div>
                     <div class="project-content">
                         <h3 class="project-title">Pesquida de Mercado - Imóveis de Leilão - MG</h3>
@@ -1499,7 +1499,7 @@
 
                 <div class="project-card" data-category="strategy">
                     <div class="project-image">
-                        <i class="fa-solid fa-chart-pie"></i>
+                        <i class="fa-solid fa-wallet"></i>
                     </div>
                     <div class="project-content">
                         <h3 class="project-title">Dados de Vendas em Empresa</h3>
@@ -2198,6 +2198,7 @@
     </script>
 </body>
 </html>
+
 
 
 
