--- a/index.html
+++ b/index.html
@@ -1405,7 +1405,7 @@
                     </div>
                 </div>
                 
-                <div class="project-card" data-category="strategy">
+                <div class="project-card" data-category="analytics"
                     <div class="project-image">
                         <i class="fa-solid fa-champagne-glasses"></i>
                     </div>
@@ -1428,7 +1428,7 @@
                     </div>
                 </div>
 
-                <div class="project-card" data-category="strategy">
+                <div class="project-card" data-category="analytics">
                     <div class="project-image">
                         <i class="fa-solid fa-ice-cream"></i>
                     </div>
@@ -1451,7 +1451,7 @@
                     </div>
                 </div>
 
-                <div class="project-card" data-category="strategy">
+                <div class="project-card" data-category="analytics">
                     <div class="project-image">
                         <i class="fa-solid fa-burger"></i>
                     </div>
@@ -1474,7 +1474,7 @@
                     </div>
                 </div>
 
-           <div class="project-card" data-category="strategy">
+           <div class="project-card" data-category="analytics">
                     <div class="project-image">
                         <i class="fas fa-house"></i>
                     </div>
@@ -1497,7 +1497,7 @@
                     </div>
                 </div>
 
-                <div class="project-card" data-category="strategy">
+                <div class="project-card" data-category="analytics">
                     <div class="project-image">
                         <i class="fa-solid fa-wallet"></i>
                     </div>
@@ -2198,6 +2198,7 @@
     </script>
 </body>
 </html>
+
 
 
 
