--- a/index.html
+++ b/index.html
@@ -1405,7 +1405,7 @@
                     </div>
                 </div>
                 
-                <div class="project-card" data-category="analytics"
+                <div class="project-card" data-category="analytics">
                     <div class="project-image">
                         <i class="fa-solid fa-champagne-glasses"></i>
                     </div>
@@ -2198,6 +2198,7 @@
     </script>
 </body>
 </html>
+
 
 
 
