--- a/index.html
+++ b/index.html
@@ -617,13 +617,16 @@
         }
 
         .experience-period {
-            color: var(--secondary);
-            font-size: 0.9rem;
-            background: var(--section-bg);
-            padding: 2px 12px;
-            border-radius: 20px;
-            font-weight: 500;
-        }
+    display: block;
+    text-align: center;
+    margin: 8px auto;
+    color: var(--secondary);
+    font-size: 0.8rem;
+    background: var(--section-bg);
+    padding: 2px 6px;
+    border-radius: 10px;
+    font-weight: 500;
+}
 
         .experience-description {
             margin-top: 1rem;
@@ -2198,6 +2201,7 @@
     </script>
 </body>
 </html>
+
 
 
 
