--- a/index.html
+++ b/index.html
@@ -603,6 +603,7 @@
         .experience-title {
             font-size: 1.4rem;
             color: var(--dark);
+            margin-top: 0.5rem;
             margin-bottom: 0.5rem;
             font-weight: 600;
         }
@@ -2199,6 +2200,7 @@
     </script>
 </body>
 </html>
+
 
 
 
