--- a/index.html
+++ b/index.html
@@ -1409,6 +1409,27 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="project-card" data-category="Finance">
+                    <div class="project-image">
+                        <i class="fa-solid fa-money-bill-trend-up"></i>
+                    </div>
+                    <div class="project-content">
+                        <h3 class="project-title">Projeto de Viabilidade Econômica 1</h3>
+                        <p class="project-description">
+                           Análise de viabilidade econômica de um empreendimento, considerando três cenários: Conservador, Base e Otimista. O estudo inclui projeções de receitas, custos, EBITDA, investimentos (CAPEX), capital de giro e fluxo de caixa ao longo de 10 anos.
+                        </p>
+                        <div class="project-tech">
+                            <span class="tech-tag">Excel</span>
+                        </div>
+                        <div class="project-links">
+                            
+                            <a href="https://github.com/VPLOPES/projeto1_Viabilidade_Economica">
+                                <i class="fab fa-github"></i> GitHub
+                            </a>
+                        </div>
+                    </div>
+                </div>
                 
 
                <div class="project-card" data-category="analytics">
@@ -2226,6 +2247,7 @@
     </script>
 </body>
 </html>
+
 
 
 
