--- a/index.html
+++ b/index.html
@@ -1424,7 +1424,7 @@
                         </div>
                         <div class="project-links">
                             
-                            <a href="https://github.com/VPLOPES/projeto1_Viabilidade_Economica">
+                            <a href="https://github.com/VPLOPES/projeto1_Viabilidade_Economica" class="project-link outline">
                                 <i class="fab fa-github"></i> GitHub
                             </a>
                         </div>
@@ -2247,6 +2247,7 @@
     </script>
 </body>
 </html>
+
 
 
 
