--- a/index.html
+++ b/index.html
@@ -1382,7 +1382,33 @@
                     </div>
                 </div>
 
+                <div class="project-card" data-category="analytics">
+                    <div class="project-image">
+                        <i class="fa-solid fa-magnifying-glass-chart"></i>
+                    </div>
+                    <div class="project-content">
+                        <h3 class="project-title">Estratégia de Hedge usando IA</h3>
+                        <p class="project-description">
+                            Notebook em Python para precificação de opções financeiras e construção de estratégias de hedge. Inclui simulação de Monte Carlo, cálculo de delta e preço pelo modelo Black-Scholes-Merton, além da aplicação de redes neurais com TensorFlow/Keras para previsão de preços de opções.
+                        </p>
+                        <div class="project-tech">
+                            <span class="tech-tag">Python</span>
+                            <span class="tech-tag">Machine Learning</span>
+                            <span class="tech-tag">numpy e pandas</span>
+                            <span class="tech-tag">scipy</span>
+                            <span class="tech-tag">tensorflow e keras</span>
+                            <span class="tech-tag">plotly.express e plotly.graph_objs</span>
+                        </div>
+                        <div class="project-links">
+                            
+                            <a href="https://github.com/VPLOPES/estrategia_de_hedge_usando_IA" class="project-link outline">
+                                <i class="fab fa-github"></i> GitHub
+                            </a>
+                        </div>
+                    </div>
+                </div>
 
+                
                 <div class="project-card" data-category="AI">
                     <div class="project-image">
                         <i class="fa-solid fa-calculator"></i>
@@ -2247,6 +2273,7 @@
     </script>
 </body>
 </html>
+
 
 
 
