--- a/index.html
+++ b/index.html
@@ -1356,7 +1356,7 @@
                 <button class="filter-btn" data-filter="strategy">Estratégia</button>
             </div>
             <div class="projects-grid">
-                <div class="project-card" data-category="analytics">
+                <div class="project-card" data-category="finance">
                     <div class="project-image">
                         <i class="fas fa-chart-line"></i>
                     </div>
@@ -1382,7 +1382,7 @@
                     </div>
                 </div>
 
-                <div class="project-card" data-category="analytics">
+                <div class="project-card" data-category="risk">
                     <div class="project-image">
                         <i class="fa-solid fa-magnifying-glass-chart"></i>
                     </div>
@@ -1409,7 +1409,7 @@
                 </div>
 
                 
-                <div class="project-card" data-category="AI">
+                <div class="project-card" data-category="risk">
                     <div class="project-image">
                         <i class="fa-solid fa-calculator"></i>
                     </div>
@@ -1436,7 +1436,7 @@
                     </div>
                 </div>
 
-                <div class="project-card" data-category="Finance">
+                <div class="project-card" data-category="finance">
                     <div class="project-image">
                         <i class="fa-solid fa-money-bill-trend-up"></i>
                     </div>
@@ -2273,6 +2273,7 @@
     </script>
 </body>
 </html>
+
 
 
 
