--- a/index.html
+++ b/index.html
@@ -364,27 +364,18 @@
             color: var(--primary);
         }
 
-        .about-image {
-            position: relative;
-        }
+        <div class="about-image">
+    <img src="foto_principal.png" alt="Vinícius Lopes" class="profile-photo">
+</div>
 
-        .profile-image {
-            width: 100%;
-            height: 400px;
-            background: linear-gradient(135deg, var(--primary), var(--primary-dark));
-            border-radius: var(--radius);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: white;
-            overflow: hidden;
-            position: relative;
-        }
-
-        .profile-image i {
-            font-size: 6rem;
-            opacity: 0.3;
-        }
+        .profile-photo {
+    width: 100%;
+    height: auto;
+    max-height: 400px;
+    object-fit: cover;
+    border-radius: 12px;
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
+}
 
         .floating-element {
             position: absolute;
@@ -2273,6 +2264,7 @@
     </script>
 </body>
 </html>
+
 
 
 
