--- a/index.html
+++ b/index.html
@@ -364,18 +364,27 @@
             color: var(--primary);
         }
 
-        <div class="about-image">
-    <img src="foto_principal.png" alt="Vinícius Lopes" class="profile-photo">
-</div>
+        .about-image {
+            position: relative;
+        }
 
-        .profile-photo {
-    width: 100%;
-    height: auto;
-    max-height: 400px;
-    object-fit: cover;
-    border-radius: 12px;
-    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
-}
+        .profile-image {
+            width: 100%;
+            height: 400px;
+            background: linear-gradient(135deg, var(--primary), var(--primary-dark));
+            border-radius: var(--radius);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: white;
+            overflow: hidden;
+            position: relative;
+        }
+
+        .profile-image i {
+            font-size: 6rem;
+            opacity: 0.3;
+        }
 
         .floating-element {
             position: absolute;
@@ -2264,22 +2273,5 @@
     </script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
