--- a/index.html
+++ b/index.html
@@ -369,17 +369,16 @@
         }
 
         .profile-image {
-            width: 100%;
-            height: 400px;
-            background: linear-gradient(135deg, var(--primary), var(--primary-dark));
-            border-radius: var(--radius);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: white;
-            overflow: hidden;
-            position: relative;
-        }
+    width: 100%;
+    height: 400px;
+    background-image: url('foto_principal.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    border-radius: var(--radius);
+    position: relative;
+    overflow: hidden;
+}
 
         .profile-image i {
             font-size: 6rem;
@@ -2273,5 +2272,6 @@
     </script>
 </body>
 </html>
+
 
 
