--- a/index.html
+++ b/index.html
@@ -376,13 +376,9 @@
     background-position: center;
     background-repeat: no-repeat;
     border-radius: var(--radius);
+    position: relative;
     overflow: hidden;
 }
-
-        .profile-image i {
-            font-size: 6rem;
-            opacity: 0.3;
-        }
 
 
         /* Education Section */
@@ -2240,6 +2236,7 @@
     </script>
 </body>
 </html>
+
 
 
 
