--- a/index.html
+++ b/index.html
@@ -1294,17 +1294,6 @@
                 </div>
                 <div class="about-image">
                     <div class="profile-image">
-                        <i class="fas fa-user-tie"></i>
-                        <div class="floating-element">
-                            <i class="fas fa-chart-line"></i>
-                        </div>
-                        <div class="floating-element">
-                            <i class="fas fa-analytics"></i>
-                        </div>
-                        <div class="floating-element">
-                            <i class="fas fa-coins"></i>
-                        </div>
-                    </div>
                 </div>
             </div>
         </section>
@@ -1450,7 +1439,7 @@
                         <i class="fa-solid fa-champagne-glasses"></i>
                     </div>
                     <div class="project-content">
-                        <h3 class="project-title">Pesquida de Mercado - Bebidas</h3>
+                        <h3 class="project-title">Pesquisa de Mercado - Bebidas</h3>
                         <p class="project-description">
                             Dashboard interativo em Power BI sobre a indústria de fabricação de bebidas em Minas Gerais e no Brasil. Inclui análises de estabelecimentos, empregos, produção industrial, comércio exterior (exportações, importações e balança comercial) e pesquisa de associados, com dados da RAIS, PIA e COMEXSTAT.
                         </p>
@@ -1473,7 +1462,7 @@
                         <i class="fa-solid fa-ice-cream"></i>
                     </div>
                     <div class="project-content">
-                        <h3 class="project-title">Pesquida de Mercado - Sorvetes</h3>
+                        <h3 class="project-title">Pesquisa de Mercado - Sorvetes</h3>
                         <p class="project-description">
                             Dashboard interativo em Power BI com análise do setor de sorvetes no Brasil. Inclui exportações, importações, balança comercial, empregos, estabelecimentos, custos e receitas, com indicadores consolidados e visualizações interativas.
                         </p>
@@ -1496,7 +1485,7 @@
                         <i class="fa-solid fa-burger"></i>
                     </div>
                     <div class="project-content">
-                        <h3 class="project-title">Pesquida de Mercado - Produtos Alimentícios</h3>
+                        <h3 class="project-title">Pesquisa de Mercado - Produtos Alimentícios</h3>
                         <p class="project-description">
                             Dashboard interativo em Power BI com análise do setor alimentício no Brasil. Inclui exportações, importações, saldo comercial, mercado de trabalho e dados industriais, com indicadores consolidados e mapas interativos.
                         </p>
@@ -1519,7 +1508,7 @@
                         <i class="fas fa-house"></i>
                     </div>
                     <div class="project-content">
-                        <h3 class="project-title">Pesquida de Mercado - Imóveis de Leilão - MG</h3>
+                        <h3 class="project-title">Pesquisa de Mercado - Imóveis de Leilão - MG</h3>
                         <p class="project-description">
                             Relatório interativo para análise do mercado imobiliário no Brasil, com foco em Minas Gerais. Inclui filtros por tipo de imóvel, mapas interativos e indicadores consolidados de quantidade, municípios e valor total dos imóveis.
                         </p>
@@ -2236,6 +2225,7 @@
     </script>
 </body>
 </html>
+
 
 
 
