--- a/index.html
+++ b/index.html
@@ -1237,8 +1237,9 @@
                 <h1>Vinícius Lopes</h1>
                 <p class="subtitle">Economista e Consultor Financeiro</p>
                 <p class="description">
-                    Especialista em gestão de risco, trading e análise financeira corporativa com experiência internacional. 
-                    Focado em desenvolvimento de protocolos de risco operacional e otimização de processos financeiros.
+                    Economista com experiência em análise financeira corporativa e gestão de risco operacional. 
+                    Background internacional e expertise em desenvolvimento de protocolos, modelagem financeira e 
+                    inteligência de mercado. Foco em otimização de processos através de análise de dados.
                 </p>
                 <div class="cta-buttons">
                     <a href="#projects" class="btn btn-primary btn-icon">
@@ -1261,9 +1262,12 @@
             <div class="about-grid">
                 <div class="about-text">
                     <p>
-                        Economista com sólida experiência em gestão de risco, trading e análise financeira corporativa. 
-                        Especialista em desenvolvimento de protocolos de risco operacional, controle de exposição e 
-                        análise técnica para operações financeiras.
+                        Economista especializado em análise de dados e inteligência de mercado, 
+                        com experiência em finanças corporativas e gestão de risco. 
+                        Forte background em modelagem financeira, valuation e desenvolvimento de soluções analíticas 
+                        para suporte à tomada de decisão estratégica. Com experiência internacional e 
+                        formação complementar em IA aplicada a negócios, combino conhecimento econômico sólido 
+                        com ferramentas tecnológicas avançadas para gerar insights que impulsionam resultados.
                     </p>
                     <p>
                         Com experiência internacional em mercados de day trade e expertise em valuation, inteligência 
@@ -1315,7 +1319,7 @@
                     <div class="project-content">
                         <h3 class="project-title">Previsão de Preços de Ativos Financeiros com IA</h3>
                         <p class="project-description">
-                            Repositório em Python para análise e previsão de preços de ativos financeiros. Inclui pipeline completo com coleta de dados via Yahoo Finance, análise exploratória, engenharia de atributos, pré-processamento e modelagem com scikit-learn.
+                            Sistema de análise preditiva que utiliza machine learning para prever movimentos de preços no mercado financeiro. O projeto demonstra a aplicação prática de IA na tomada de decisões de investimento, com pipeline completo desde coleta de dados até modelagem preditiva.
                         </p>
                         <div class="project-tech">
                             <span class="tech-tag">Python</span>
@@ -1368,7 +1372,7 @@
                     <div class="project-content">
                         <h3 class="project-title">Calculadora de Trading</h3>
                         <p class="project-description">
-                            Calculadora de gerenciamento de risco para day trade em índice futuro (NASDAQ-100). O sistema auxilia no planejamento de operações, gestão de posições e controle de resultados, mantendo a disciplina do trader.
+                            Ferramenta de gestão de risco financeiro para operações de mercado. Sistema que automatiza cálculos de exposição e ajuda na manutenção da disciplina operacional, aplicável tanto para trading quanto para gestão de portfólios de investimento.
                         </p>
                         <div class="project-tech">
                             <span class="tech-tag">Excel</span>
@@ -2225,6 +2229,7 @@
     </script>
 </body>
 </html>
+
 
 
 
