--- a/index.html
+++ b/index.html
@@ -1248,7 +1248,7 @@
                     <a href="#contact" class="btn btn-secondary btn-icon">
                         <i class="fas fa-paper-plane"></i> Entre em Contato
                     </a>
-                    <a href="#" class="btn btn-secondary btn-icon" id="downloadCV">
+                    <a href="Curriculo_08_25.pdf" class="btn btn-secondary btn-icon" download="Curriculo_Vinicius_Lopes.pdf">
                         <i class="fas fa-download"></i> Baixar CV
                     </a>
                 </div>
@@ -2229,6 +2229,7 @@
     </script>
 </body>
 </html>
+
 
 
 
