--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vinícius Lopes - Economista e Consultor Financeiro</title>
     <meta name="description" content="Portfólio profissional de Vinícius Lopes, economista e consultor financeiro especializado em gestão de risco, trading e análise financeira corporativa">
+
+      <!-- Hreflang para SEO multilingue -->
+    <link rel="alternate" href="https://vplopes.github.io/Portifolio/" hreflang="pt-BR">
+    <link rel="alternate" href="https://vplopes.github.io/Portifolio/es/" hreflang="es">
+    <link rel="alternate" href="https://vplopes.github.io/Portifolio/" hreflang="x-default">
+
+    <link rel="stylesheet" href="css/style.css">
     <meta name="keywords" content="economista, consultor financeiro, gestão de risco, trading, análise financeira, portfólio, valuation, consultoria">
     <meta name="author" content="Vinícius Lopes">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -1206,6 +1213,11 @@
 </head>
 <body>
     <header>
+        <nav class="lang-switch">
+          <a href="/">🇧🇷 Português</a> | 
+          <a href="/es/">🇪🇸 Español</a>
+        </nav>
+        
         <nav class="container">
             <a href="#home" class="logo">
                 <i class="fas fa-chart-line"></i>
@@ -2229,6 +2241,7 @@
     </script>
 </body>
 </html>
+
 
 
 
