--- a/index.html
+++ b/index.html
@@ -1311,6 +1311,33 @@
                 <button class="filter-btn" data-filter="analytics">Análise de Dados</button>
                 <button class="filter-btn" data-filter="strategy">Estratégia</button>
             </div>
+                        <div class="projects-grid">
+                <div class="project-card" data-category="finance">
+                    <div class="project-image">
+                        <i class="fas fa-chart-line"></i>
+                    </div>
+                    <div class="project-content">
+                        <h3 class="project-title">IPCA e Boletim Focus em tempo real</h3>
+                        <p class="project-description">
+                            Calculadora de correção de indíces financeiros, com Boletim Focus e análise cambial. 
+                        </p>
+                        <div class="project-tech">
+                            <span class="tech-tag">Python</span>
+                            <span class="tech-tag">Streamlit</span>
+                            <span class="tech-tag">Análise de Dados</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://painel-ipca.streamlit.app/" class="project-link outline">
+                                <i class="fas fa-eye"></i> Ver Projeto
+                            </a>
+                            
+                            <a href="https://github.com/VPLOPES/painel-ipca" class="project-link outline">
+                                <i class="fab fa-github"></i> GitHub
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
             <div class="projects-grid">
                 <div class="project-card" data-category="finance">
                     <div class="project-image">
@@ -2229,6 +2256,7 @@
     </script>
 </body>
 </html>
+
 
 
 
