--- a/index.html
+++ b/index.html
@@ -1980,27 +1980,24 @@
                     </div>
                 </div>
                 <div class="contact-form">
-                    <form id="contactForm">
+                    
+                    <form action="https://formspree.io/f/mgowwgvv" method="POST" class="contact-form">
                         <div class="form-group">
-                            <label for="name">Nome</label>
-                            <input type="text" id="name" class="form-control" required>
+                          <label for="name">Nome</label>
+                          <input type="text" name="name" id="name" class="form-control" required>
                         </div>
                         <div class="form-group">
-                            <label for="email">Email</label>
-                            <input type="email" id="email" class="form-control" required>
+                          <label for="email">Email</label>
+                          <input type="email" name="email" id="email" class="form-control" required>
                         </div>
                         <div class="form-group">
-                            <label for="subject">Assunto</label>
-                            <input type="text" id="subject" class="form-control" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="message">Mensagem</label>
-                            <textarea id="message" class="form-control" required></textarea>
+                          <label for="message">Mensagem</label>
+                          <textarea name="message" id="message" class="form-control" required></textarea>
                         </div>
                         <button type="submit" class="btn btn-primary" style="width: 100%;">
-                            <i class="fas fa-paper-plane"></i> Enviar Mensagem
+                          <i class="fas fa-paper-plane"></i> Enviar Mensagem
                         </button>
-                    </form>
+                </form>
                 </div>
             </div>
         </section>
@@ -2234,6 +2231,7 @@
     </script>
 </body>
 </html>
+
 
 
 
