Alteração no head

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <meta name="description" content="Portfólio profissional de Vinícius Lopes, economista e consultor financeiro especializado em gestão de risco, trading e análise financeira corporativa">
     <meta name="keywords" content="economista, consultor financeiro, gestão de risco, trading, análise financeira, portfólio, valuation, consultoria">
     <meta name="author" content="Vinícius Lopes">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://vplopes.github.io/Portifolio/">
+    <meta property="og:title" content="Vinícius Lopes | Economista e Data Scientist">
+    <meta property="og:description" content="Portfólio de projetos em Finanças, Gestão de Risco e Machine Learning. Veja meus cases em Python, Power BI e Estratégia.">
+    <meta property="og:image" content="https://vplopes.github.io/Portifolio/foto_principal.png">
+
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://vplopes.github.io/Portifolio/">
+    <meta property="twitter:title" content="Vinícius Lopes | Economista e Data Scientist">
+    <meta property="twitter:description" content="Portfólio de projetos em Finanças, Gestão de Risco e Machine Learning.">
+    <meta property="twitter:image" content="https://vplopes.github.io/Portifolio/foto_principal.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -2231,6 +2242,7 @@
     </script>
 </body>
 </html>
+
 
 
 
